--- a/coc-settings.json
+++ b/coc-settings.json
@@ -25,8 +25,11 @@
     "jsonc",
     "ruby"
   ],
-  "codeLens.enable": true,
+  "codeLens.enable": false,
   "solargraph.useBundler": false,
   "solargraph.autoformat": true,
-  "solargraph.formatting": true
+  "solargraph.formatting": true,
+  "solargraph.diagnostics": true,
+  "solargraph.hover": true,
+  "solargraph.completion": true
 }
